--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -7,5 +7,8 @@
 <body>
     <h1>Welcome to the Demo Page</h1>
     <p>This is a simple index.html example.</p>
+    <footer>
+        <p>&copy; 2023 Demo Page</p>
+    </footer>
 </body>
 </html>
