feat: updated the heading

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -5,7 +5,7 @@
     <title>Simple Index Page</title>
 </head>
 <body>
-    <h1>Welcome to the Demo Page</h1>
+    <h1>Welcome to the Demo Page 01</h1>
     <p>This is a simple index.html example.</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
