feat(103): added company style

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Index Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to the Demo Page 01</h1>
