--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Welcome to the Demo Page 01</h1>
     <p>This is a simple index.html example.</p>
+    <p>Good Login</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
     </footer>
