fix: emergency login redirects

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -9,6 +9,7 @@
     <h1>Welcome to the Demo Page 01</h1>
     <p>This is a simple index.html example.</p>
     <p>Good Login 3</p>
+    <p>Emergency Fix 001</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
     </footer>
