--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -10,6 +10,7 @@
     <p>This is a simple index.html example.</p>
     <p>Good Login 3</p>
     <p>Emergency Fix 001</p>
+    <p>Emergency Fix 10002</p>
     <p>130</p>
     <p>131</p>
     <footer>
