--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -10,7 +10,7 @@
     <p>This is a simple index.html example.</p>
     <p>Good Login 3</p>
     <p>Emergency Fix 001</p>
-    <p>Emergency Fix 10003</p>
+    <p>Emergency Fix 10003 - v2</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
     </footer>
