feat(135): Mentioned LLM Model version in the index.html

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -14,7 +14,7 @@
     <p>130</p>
     <p>131</p>
     <p>120</p>
-    <p>135</p>
+    <p>135 - OpenAI - GPT4.1</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
     </footer>
