feat(136): Integrated billing with Gemini 2.4

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -15,6 +15,7 @@
     <p>131</p>
     <p>120</p>
     <p>135 - OpenAI - GPT4.1</p>
+    <p>136 - Google - Gemini 2.5</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
     </footer>
