feat(150): Integrated with CoPilot

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -16,6 +16,7 @@
     <p>120</p>
     <p>135 - OpenAI - GPT4.1</p>
     <p>136 - Google - Gemini 2.5</p>
+    <p>150 - Microsoft - Copilot 2.0</p>
     <footer>
         <p>&copy; 2023 Demo Page</p>
     </footer>
