feat: added feature 150

--- a/custom-version-update-example/index.html
+++ b/custom-version-update-example/index.html
@@ -17,6 +17,7 @@
     <p>135 - OpenAI - GPT4.1</p>
     <p>136 - Google - Gemini 2.5</p>
     <p>150 - Microsoft - Copilot 2.0</p>
+    <p>151 - Feature 150</p>
     <footer>
         <p>&copy; 2024 Demo Page</p>
     </footer>
